--- a/resources/fxml/clientPage.fxml
+++ b/resources/fxml/clientPage.fxml
@@ -32,7 +32,7 @@
             <TableColumn fx:id="colPrice" prefWidth="133.0" text="Cijena po danu (KM)" />
         </columns>
       </TableView>
-      <ChoiceBox fx:id="choiceType" onAction="#changeType" prefWidth="150.0" value="Sva vozilarf" GridPane.rowIndex="3">
+      <ChoiceBox fx:id="choiceType" onAction="#changeType" prefWidth="150.0" value="Sva vozila" GridPane.rowIndex="3">
           <items>
               <FXCollections fx:factory="observableArrayList">
                   <String fx:value="Sva vozila" />
