--- a/resources/fxml/registration.fxml
+++ b/resources/fxml/registration.fxml
@@ -15,10 +15,11 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
+      <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="292.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="232.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="215.0" minHeight="21.0" prefHeight="50.0" />
+    <RowConstraints maxHeight="292.0" minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="232.0" minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="215.0" minHeight="30.0" prefHeight="50.0" />
       <RowConstraints maxHeight="153.0" minHeight="30.0" prefHeight="50.0" />
       <RowConstraints maxHeight="130.0" minHeight="30.0" prefHeight="50.0" />
       <RowConstraints maxHeight="130.0" minHeight="30.0" prefHeight="50.0" />
@@ -27,32 +28,40 @@
       <RowConstraints maxHeight="130.0" minHeight="30.0" prefHeight="50.0" />
   </rowConstraints>
     <children>
-        <Label text="Kreirajte Vaš račun" GridPane.rowIndex="0">
+        <Label fx:id="lblText" GridPane.rowIndex="1">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label text="Ime:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <Label text="Prezime:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField fx:id="fldFirstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <TextField fx:id="fldLastName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <Label text="Email adresa:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <TextField fx:id="fldEmail" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <Label text="Korisničko ime:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <Label text="Lozinka:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-        <TextField fx:id="fldUsername" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-        <PasswordField fx:id="fldPassword" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
+        <Label text="Ime:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label text="Prezime:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField fx:id="fldFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="fldLastName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label text="Email adresa:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <TextField fx:id="fldEmail" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label text="Korisničko ime:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <Label text="Lozinka:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+        <TextField fx:id="fldUsername" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <PasswordField fx:id="fldPassword" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
         <buttons>
           <Button fx:id="btnRegistrationConfirm" mnemonicParsing="false" onAction="#registrationConfirmAction" text="OK" />
         </buttons>
       </ButtonBar>
-      <Label text="Ponovi lozinku:" GridPane.rowIndex="6" />
-      <PasswordField fx:id="fldRetypePassword" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <Label fx:id="lblAddress" text="Adresa:" GridPane.rowIndex="7" />
-      <TextField fx:id="fldAddress" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <Label fx:id="lblTelephone" text="Telefon:" GridPane.rowIndex="8" />
-      <TextField fx:id="fldTelephone" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Label text="Ponovi lozinku:" GridPane.rowIndex="7" />
+      <PasswordField fx:id="fldRetypePassword" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <Label fx:id="lblAddress" text="Adresa:" GridPane.rowIndex="8" />
+      <TextField fx:id="fldAddress" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Label fx:id="lblTelephone" text="Telefon:" GridPane.rowIndex="9" />
+      <TextField fx:id="fldTelephone" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+      <ButtonBar GridPane.columnIndex="1">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+         <buttons>
+            <Button mnemonicParsing="false" onAction="#backRegistrationAction" text="Nazad" />
+         </buttons>
+      </ButtonBar>
     </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
