--- a/resources/fxml/adminPage.fxml
+++ b/resources/fxml/adminPage.fxml
@@ -44,6 +44,7 @@
                               <Button fx:id="btnEditVehicle" minHeight="-Infinity" mnemonicParsing="false" onAction="#editVehicleAction" prefHeight="45.0" prefWidth="45.0" />
                               <Button fx:id="btnDeleteVehicle" minHeight="-Infinity" mnemonicParsing="false" onAction="#deleteVehicleAction" prefHeight="45.0" prefWidth="45.0" />
                               <Button fx:id="btnVehicleReport" minHeight="-Infinity" mnemonicParsing="false" onAction="#vehicleReportAction" prefHeight="45.0" prefWidth="45.0" />
+                              <Button fx:id="btnWriteVehiclesXML" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#writeVehiclesXMLAction" prefHeight="45.0" prefWidth="45.0" />
                            </children>
                            <GridPane.margin>
                               <Insets top="10.0" />
@@ -137,6 +138,7 @@
                                     <Button fx:id="btnEditClient" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#editClientAction" prefHeight="45.0" prefWidth="45.0" />
                                     <Button fx:id="btnDeleteClient" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteClientAction" prefHeight="45.0" prefWidth="45.0" />
                               <Button fx:id="btnReportClient" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#clientReportAction" prefHeight="45.0" prefWidth="45.0" />
+                              <Button fx:id="btnWriteClientsXML" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#writeClientsXMLAction" prefHeight="45.0" prefWidth="45.0" />
                                 </children>
                                 <GridPane.margin>
                                     <Insets top="10.0" />
