Implementirano rekurzivno pretrazivanje foldera da se pronadje fotografija vozila, kao i mogucnost dodavanja fotografije vozila pri dodavanju vozila, izmjeni vozila

--- a/resources/css/rentacar.css
+++ b/resources/css/rentacar.css
@@ -57,3 +57,6 @@
 #btnWriteVehiclesXML, #btnWriteClientsXML{
     -fx-background-image: url("/images/xmlIcon.png");
 }
+#lblName, #lblBrand, #lblModel, #lblColor, #lblEngine, #lblTransmission, #lblYear, #lblType, #lblPrice, #lblFuelConsumption, #lblAvailability, #lblNmbDoors, #lblNmbSeats{
+    -fx-font-weight: bold;
+}
