--- a/resources/fxml/addCar.fxml
+++ b/resources/fxml/addCar.fxml
@@ -5,15 +5,16 @@
 <?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="287.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/rentacar.css" />
     </stylesheets>
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="0.0" prefWidth="103.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="150.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="0.0" prefWidth="174.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="203.0" />
     </columnConstraints>
     <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -28,8 +29,14 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="24.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
@@ -46,7 +53,7 @@
         <TextField fx:id="fldBrand" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <TextField fx:id="fldModel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <TextField fx:id="fldColor" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-        <Label text="Cijena po danu:" GridPane.rowIndex="11" />
+        <Label text="Cijena po danu (u KM):" GridPane.rowIndex="11" />
       <ChoiceBox fx:id="choiceEngine" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
         <items>
             <FXCollections fx:factory="observableArrayList">
@@ -65,7 +72,7 @@
             </FXCollections>
         </items>
         </ChoiceBox>
-      <ButtonBar prefHeight="30.0" prefWidth="241.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="14">
+      <ButtonBar prefHeight="30.0" prefWidth="241.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="20">
         <buttons>
           <Button fx:id="btnAddConfirm" mnemonicParsing="false" onAction="#addConfirmAction" text="OK" />
             <Button fx:id="btnCloseAddCar" mnemonicParsing="false" onAction="#CloseAddCarAction" prefHeight="25.0" prefWidth="162.0" text="Zatvori" />
@@ -81,7 +88,7 @@
         </items>
         </ChoiceBox>
       <Label text="Naziv:" />
-      <TextField fx:id="fldName" GridPane.columnIndex="1" />
+      <TextField fx:id="fldName" prefWidth="147.0" GridPane.columnIndex="1" />
       <ComboBox fx:id="comboYear" editable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
         <items>
             <FXCollections fx:factory="observableArrayList">
@@ -121,6 +128,9 @@
       </ComboBox>
       <Label text="Dostupnost:" GridPane.rowIndex="12" />
       <CheckBox fx:id="checkAvailability" mnemonicParsing="false" text="DA" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+      <Button mnemonicParsing="false" onAction="#addImageAction" text="Dodaj" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+      <Label text="Dodaj sliku:" GridPane.rowIndex="13" />
+      <ImageView fx:id="placeholderImage" fitHeight="171.0" fitWidth="242.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="14" GridPane.rowSpan="5" />
     </children>
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
