--- a/resources/fxml/clientPage.fxml
+++ b/resources/fxml/clientPage.fxml
@@ -15,13 +15,15 @@
   <rowConstraints>
     <RowConstraints maxHeight="93.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="273.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TableView fx:id="tableViewCars" prefHeight="253.0" prefWidth="527.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+
+      <TableView fx:id="tableViewCars" prefHeight="253.0" prefWidth="527.0" GridPane.columnSpan="2" GridPane.rowIndex="6">
         <columns>
             <TableColumn fx:id="colId" minWidth="0.0" prefWidth="0.0" text="ID" />
           <TableColumn fx:id="colName" prefWidth="93.99999237060547" text="Naziv" />
@@ -32,7 +34,7 @@
             <TableColumn fx:id="colPrice" prefWidth="133.0" text="Cijena po danu (KM)" />
         </columns>
       </TableView>
-      <ChoiceBox fx:id="choiceType" onAction="#changeType" prefWidth="150.0" value="Sva vozila" GridPane.rowIndex="3">
+      <ChoiceBox fx:id="choiceType" onAction="#changeType" prefWidth="150.0" value="Sva vozila" GridPane.rowIndex="4">
           <items>
               <FXCollections fx:factory="observableArrayList">
                   <String fx:value="Sva vozila" />
@@ -42,18 +44,18 @@
               </FXCollections>
           </items>
       </ChoiceBox>
-      <ButtonBar prefHeight="43.0" prefWidth="212.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <ButtonBar prefHeight="43.0" prefWidth="212.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <buttons>
             <Button mnemonicParsing="false" onAction="#logOutAction" text="Odjavi se" />
          </buttons>
       </ButtonBar>
-      <ButtonBar GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <ButtonBar GridPane.columnIndex="1" GridPane.rowIndex="4">
          <buttons>
              <Button mnemonicParsing="false" onAction="#seeReservationAction" text="Moje rezervacije" />
             <Button mnemonicParsing="false" onAction="#profileAction" text="Profil" />
          </buttons>
       </ButtonBar>
-      <Label fx:id="lblWelcome" text="Dobrodošli" GridPane.rowIndex="1">
+      <Label fx:id="lblWelcome" text="Dobrodošli" GridPane.rowIndex="2">
          <font>
             <Font size="19.0" />
          </font></Label>
