--- a/resources/fxml/clientPage.fxml
+++ b/resources/fxml/clientPage.fxml
@@ -36,6 +36,11 @@
                        <MenuItem mnemonicParsing="false" text="Uredi rezervaciju" onAction="#editMyReservationsAction"/>
                    </items>
                </Menu>
+               <Menu mnemonicParsing="false" text="Pomoć">
+                   <items>
+                       <MenuItem mnemonicParsing="false" text="O aplikaciji" onAction="#aboutAction"/>
+                   </items>
+               </Menu>
            </menus>
        </MenuBar>
       <TableView fx:id="tableViewCars" prefHeight="253.0" prefWidth="527.0" GridPane.columnSpan="2" GridPane.rowIndex="6">
