--- a/resources/fxml/employeePage.fxml
+++ b/resources/fxml/employeePage.fxml
@@ -16,14 +16,41 @@
       <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="297.0" minHeight="10.0" prefHeight="243.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="297.0" minHeight="10.0" prefHeight="286.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
    <children>
-      <TabPane fx:id="tabPane" prefHeight="149.0" prefWidth="264.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
+       <MenuBar prefHeight="25.0" prefWidth="347.0" GridPane.columnSpan="1" GridPane.rowIndex="0">
+           <menus>
+               <Menu mnemonicParsing="false" text="File">
+                   <items>
+                       <Menu mnemonicParsing="false" text="Izvještaji">
+                     <items>
+                         <MenuItem mnemonicParsing="false" onAction="#vehicleReportAction" text="Vozila" />
+                         <MenuItem mnemonicParsing="false" onAction="#clientReportAction" text="Rezervacije" />
+                         <MenuItem mnemonicParsing="false" onAction="#reservationReportAction" text="Klijenti" />
+                     </items>
+                       </Menu>
+                   </items>
+               </Menu>
+               <Menu mnemonicParsing="false" text="Profil">
+                   <items>
+                       <MenuItem mnemonicParsing="false" onAction="#editProfilAction" text="Uredi profil" />
+                       <MenuItem mnemonicParsing="false" onAction="#logOutAction" text="Odjavi se" />
+                   </items>
+               </Menu>
+               <Menu mnemonicParsing="false" text="Pomoć">
+                   <items>
+                       <MenuItem mnemonicParsing="false" onAction="#aboutAction" text="O aplikaciji" />
+                   </items>
+               </Menu>
+           </menus>
+       </MenuBar>
+      <TabPane fx:id="tabPane" prefHeight="149.0" prefWidth="264.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
         <tabs>
           <Tab text="Vozila">
             <content>
@@ -201,16 +228,12 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Label fx:id="lblWelcome" text="Dobrodošli">
+      <Label fx:id="lblWelcome" text="Dobrodošli" GridPane.rowIndex="1">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
-      <Button cancelButton="true" mnemonicParsing="false" onAction="#logOutAction" prefHeight="25.0" prefWidth="91.0" text="Odjavi se">
-         <GridPane.margin>
-            <Insets left="830.0" />
-         </GridPane.margin>
-      </Button>
+
    </children>
    <opaqueInsets>
       <Insets />
